--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Outfit"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>QR code component</title>
   </head>
@@ -20,16 +24,15 @@
         Scan the QR code to visit Frontend Mentor and take your coding skills to
         the next level
       </p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum non lobortis eros, sit amet dapibus nisi. Praesent diam neque, scelerisque vehicula vulputate a, sagittis vel orci. Vivamus vitae tincidunt est. Proin tempor elementum sapien eget pharetra. Fusce blandit varius gravida. Ut ac sollicitudin massa. Proin tempor sagittis mi ac bibendum. Vivamus sodales ipsum vel pulvinar semper. Aliquam erat volutpat. Fusce iaculis felis at auctor pellentesque. Etiam facilisis, justo id placerat bibendum, arcu mi pellentesque tellus, in convallis felis odio quis urna. Aenean porta eu quam at consequat. Duis scelerisque, magna ac sollicitudin fermentum, odio massa auctor quam, eu porta diam ex eget magna. Proin semper enim in viverra pharetra. Pellentesque at commodo elit, auctor lobortis lectus.</p>
-      <p>Nulla sodales mollis posuere. Nam nunc felis, iaculis eget lectus in, accumsan placerat nisl. Duis quis neque a nisl imperdiet egestas ut eu metus. In sit amet imperdiet est, a mattis augue. Suspendisse semper, mauris eget posuere sagittis, magna metus maximus urna, ullamcorper rhoncus elit risus non lectus. Etiam non eros nec arcu ultricies sodales. Vestibulum mollis ipsum nibh, in dignissim risus consequat non. Ut condimentum quis felis a consequat. Donec nec mattis mauris, id auctor nibh.</p>
-      <p>Sed at neque ac ante ultrices bibendum sed ut nibh. Curabitur eu vehicula nibh. Sed non fermentum leo. Nam eget mollis mi. In sit amet ante tincidunt, sagittis ligula imperdiet, mattis tellus. Cras sit amet consectetur mauris. Aliquam semper volutpat urna, eget sodales ante vestibulum et. Nullam at interdum est. Pellentesque ultricies velit convallis ipsum vulputate, et semper ante eleifend. Phasellus faucibus felis et dolor porttitor sollicitudin. Nunc egestas ligula dui, eget pharetra nunc hendrerit non. Integer placerat tellus sed nibh faucibus varius. Pellentesque vel lacus consectetur, tempor mi quis, laoreet nibh.</p>
     </div>
     <footer>
       <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Juan Luis Mendiola Esquivel</a>.
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Juan Luis Mendiola Esquivel</a>.
+        </p>
       </div>
     </footer>
   </body>
