--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
     </div>
     <footer>
       <div class="attribution">
-        <p>
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="#">Juan Luis Mendiola Esquivel</a>.
-        </p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/mendibox" target="_blank">mendibox</a>.
       </div>
     </footer>
   </body>
