--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
     <title>QR code component</title>
   </head>
   <body>
-    <div class="container">
-      <img src="./images/image-qr-code.png" alt="qr code" class="qr-code" />
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </div>
+    <main class="flex-container">
+      <div class="component-background">
+        <img src="./images/image-qr-code.png" alt="qr code" class="qr-code" />
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
+    </main>
     <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/mendibox" target="_blank">mendibox</a>.
+        >. Coded by
+        <a href="https://github.com/mendibox" target="_blank">mendibox</a>.
       </div>
     </footer>
   </body>
