--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   <body>
     <main class="flex-container">
       <div class="component-background">
-        <img src="./images/image-qr-code.png" alt="qr code image" class="qr-code" />
+        <img
+          src="./images/image-qr-code.png"
+          alt="qr code image"
+          class="qr-code"
+        />
         <h1>Improve your front-end skills by building projects</h1>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills
